Assertion failure for exception in "prototype" property getter and Reflect.construct https://bugs.webkit.org/show_bug.cgi?id=157084

Reviewed by Mark Lam.

InternalFunction::createSubclassStrucuture may throw exceptions because it performs [[Get]] to
look up the "prototype" object. The current assertion is invalid.
We also found that Object constructor is not aware of new.target. This is filed[1].

[1]: https://bugs.webkit.org/show_bug.cgi?id=157196

* runtime/InternalFunction.cpp:
(JSC::InternalFunction::createSubclassStructure):
* tests/stress/create-subclass-structure-may-throw-exception-when-getting-prototype.js: Added.
(shouldThrow):
(bf):


Canonical link: https://commits.webkit.org/175297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200257 268f45cc-cd09-0410-ab3c-d52691b4dbfc